--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ html {
 }
 
 .input {
-  @apply rounded-lg border border-gray-500/70 bg-secondary-color p-2 text-white;
+  @apply rounded-lg border border-gray-500/70 bg-secondary-color p-2 text-black;
 }
 
 .input:focus {
